Appcache fixes